--- a/templates/index.html
+++ b/templates/index.html
@@ -1080,7 +1080,6 @@
             .proxy-badge {
                 display: inline-flex;
                 align-items: center;
-                background-color: var(--vpn-badge-color);
                 color: white;
                 padding: 4px 10px;
                 border-radius: 50px;
@@ -1094,6 +1093,10 @@
             .proxy-badge svg {
                 width: 16px;
                 height: 16px;
+            }
+
+            .vpn-badge {
+                background-color: var(--vpn-badge-color);
             }
 
             .proxy-badge {
@@ -1518,17 +1521,25 @@
                                         </div>
                                         <div class="vpn-badge" id="vpn-badge" style="display: none">
                                             <svg
-                                                viewBox="0 0 24 24"
+                                                viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg"
                                             >
                                                 <path
-                                                    d="M17 9V7c0-2.8-2.2-5-5-5S7 4.2 7 7v2c-1.7 0-3 1.3-3 3v7c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3v-7c0-1.7-1.3-3-3-3M9 7c0-1.7 1.3-3 3-3s3 1.3 3 3v2H9z"
+                                                    d="M7.918 1A2.91 2.91 0 0 0 5 3.918V5a1.014 1.014 0 0 0-1 1.031V9.97c0 .569.46 1.03 1.031 1.03H7v1.875h2V11h1.969c.57 0 1.031-.46 1.031-1.031V6.03A1.014 1.014 0 0 0 11 5V3.918A2.91 2.91 0 0 0 8.082 1ZM8 3c.555 0 1 .445 1 1v1H7V4c0-.555.445-1 1-1m0 0"
+                                                    fill="#FFFFFF"
+                                                />
+                                                <path
+                                                    d="M7.996 15.95a2 2 0 0 1-1.715-.973H2.996c-.55 0-1-.45-1-1 0-.551.45-1 1-1h3.25a2 2 0 0 1 1.75-1.04 2.01 2.01 0 0 1 1.754 1.04h3.258a1 1 0 1 1 0 2H9.715a2.01 2.01 0 0 1-1.719.972m0-1a1.007 1.007 0 1 0 .002-2.015 1.007 1.007 0 0 0-.002 2.014m0 0"
                                                     fill="#FFFFFF"
                                                 />
                                             </svg>
                                             <span>VPN</span>
                                         </div>
-                                        <div class="proxy-badge" id="proxy-badge" style="display: none">
+                                        <div
+                                            class="proxy-badge"
+                                            id="proxy-badge"
+                                            style="display: none"
+                                        >
                                             <svg
                                                 viewBox="0 0 24 24"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -1614,7 +1625,7 @@
     "currency": "USD",
     "accuracy_radius": 100,
     "asn": 13335,
-    "organization": "Cloudflare, Inc.",
+    "asn_name": "Cloudflare, Inc.",
     "tor_exit_node": false,
     "vpn": false,
     "vpn_name": null,
@@ -1641,7 +1652,7 @@
                                         currency: 'USD',
                                         accuracy_radius: 100,
                                         asn: 13335,
-                                        organization: 'Cloudflare, Inc.',
+                                        asn_name: 'Cloudflare, Inc.',
                                         tor_exit_node: false,
                                         vpn: false,
                                         vpn_name: null,
@@ -2261,7 +2272,27 @@
 
                         locationFields.forEach(field => {
                             if (isValidValue(data[field.key])) {
-                                addResultItem(locationGrid, field.label, data[field.key]);
+                                let displayValue = data[field.key];
+
+                                if (
+                                    field.key === 'continent' &&
+                                    isValidValue(data.continent_code)
+                                ) {
+                                    displayValue =
+                                        data.continent + ' (' + data.continent_code + ')';
+                                } else if (
+                                    field.key === 'country' &&
+                                    isValidValue(data.country_code)
+                                ) {
+                                    displayValue = data.country + ' (' + data.country_code + ')';
+                                } else if (
+                                    field.key === 'region' &&
+                                    isValidValue(data.region_code)
+                                ) {
+                                    displayValue = data.region + ' (' + data.region_code + ')';
+                                }
+
+                                addResultItem(locationGrid, field.label, displayValue);
 
                                 if (field.key === 'timezone' && isValidValue(data.offset)) {
                                     const offsetHours = data.offset / 3600;
@@ -2295,13 +2326,15 @@
                     if (networkGrid) {
                         networkGrid.innerHTML = '';
 
-                        const showAsnName = data.asn_name !== data.organization;
+                        const showOrgName = data.asn_name !== data.org;
+                        const showNet = data.net !== data.org && showOrgName;
 
                         const networkFields = [
                             { key: 'asn', label: 'ASN' },
-                            ...(showAsnName ? [{ key: 'asn_name', label: 'ASN Name' }] : []),
-                            { key: 'organization', label: 'Organization' },
-                            { key: 'net', label: 'Network' },
+                            { key: 'asn_name', label: 'ASN Name' },
+                            ...(showOrgName ? [{ key: 'org', label: 'Organization' }] : []),
+                            ...(showNet ? [{ key: 'net', label: 'Network' }] : []),
+                            { key: 'prefix', label: 'Prefix' },
                         ];
 
                         networkFields.forEach(field => {
@@ -2318,16 +2351,12 @@
                         let vpnDisplay = 'No';
                         if (data.vpn === true) {
                             vpnDisplay = isValidValue(data.vpn_name)
-                                ? `Yes (${data.vpn_name})`
+                                ? 'Yes (' + data.vpn_name + ')'
                                 : 'Yes';
                         }
                         addResultItem(abuseGrid, 'VPN', vpnDisplay);
 
-                        addResultItem(
-                            abuseGrid,
-                            'Proxy',
-                            data.proxy === true ? 'Yes' : 'No'
-                        );
+                        addResultItem(abuseGrid, 'Proxy', data.proxy === true ? 'Yes' : 'No');
                         addResultItem(
                             abuseGrid,
                             'Tor Exit Node',
